--- a/src/style.css
+++ b/src/style.css
@@ -523,8 +523,10 @@ button:focus {
   margin-top: 0.5em !important;
   margin-bottom: 0.5em !important;
   padding: 0 !important;
-  float: right; 
-
+  /* float: right;  */
+  display: flex;
+  justify-content: flex-end; /* Aligns the icons to the right */
+  list-style: none;
 }
 
 .blockquote-footer {
